edit project with team members and adding project service tests